# TS-LLM-Miniproject

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt
chroma_db/b4eb2605-d7a2-4f7c-9514-d8e00f7e0a4e/: index_metadata.pickle
src/: anomaly_detector.py  data_processor.py  forecasting.py  llm_analyzer.py  vector_db.py  visualizations.py
